--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image: ^3.4.1
   intl: ^0.20.2
   url_launcher: ^6.3.2
+  riverpod_annotation: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ dev_dependencies:
   json_serializable: ^6.11.2
   custom_lint: ^0.8.1
   riverpod_lint: ^3.0.3
+  riverpod_generator: ^3.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
