--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   intl: ^0.20.2
   url_launcher: ^6.3.2
   riverpod_annotation: ^3.0.3
+  flutter_card_swiper: ^7.2.0
 
 dev_dependencies:
   flutter_test:
